--- a/pom.xml
+++ b/pom.xml
@@ -124,7 +124,7 @@
                <version>1.1.1</version>
                <executions>
                   <execution>
-                     <phase>compie</phase>
+                     <phase>compile</phase>
                      <goals>
                          <goal>package</goal>
                      </goals>
