--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,6 @@ tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
 }
 
-
-
 repositories {
         
      maven { url "http://repo.maven.apache.org/maven2" }
@@ -27,4 +25,35 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version:'18.0'
     compile group: 'com.intellij', name: 'forms_rt', version:'5.0'
     testCompile group: 'junit', name: 'junit', version:'3.8.1'
+}
+
+jar {
+    doFirst {
+        manifest {
+            if (!configurations.compile.isEmpty()) {
+                attributes(
+                        'Class-Path': configurations.compile.collect{it.toURI().toString()}.join(' '),
+                        'Main-Class': 'com.zenplanner.sql.App')
+            }
+        }
+    }
+}
+
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'DBSync',
+                'Implementation-Version': version,
+                'Main-Class': 'com.zenplanner.sql.App'
+    }
+    baseName = project.name + '-all'
+    from {
+        configurations.runtime.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+
+        configurations.compile.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
+    with jar
 }
